--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -6,10 +6,73 @@
 
 @plugin "@tailwindcss/typography";
 @plugin "daisyui" {
-	themes:
-		silk --default,
-		forest --prefersdark;
+	themes: custom_light, custom_dark;
+}
+
+@plugin "daisyui/theme" {
+	name: 'custom_light';
+	default: true;
+	--color-base-100: oklch(97% 0.0035 67.78);
+	--color-base-200: oklch(95% 0.0081 61.42);
+	--color-base-300: oklch(90% 0.0081 61.42);
+	--color-base-content: oklch(40% 0.0081 61.42);
+	--color-primary: oklch(31.29% 0.0894 250.37);
+	--color-primary-content: oklch(97% 0.0035 67.78);
+	--color-secondary: oklch(80.39% 0.1148 241.68);
+	--color-secondary-content: oklch(30.39% 0.1148 241.68);
+	--color-accent: oklch(83.92% 0.0901 136.87);
+	--color-accent-content: oklch(23.92% 0.0901 136.87);
+	--color-neutral: oklch(20% 0 0);
+	--color-neutral-content: oklch(80% 0.0081 61.42);
+	--color-info: oklch(80.39% 0.1148 241.68);
+	--color-info-content: oklch(30.39% 0.1148 241.68);
+	--color-success: oklch(83.92% 0.0901 136.87);
+	--color-success-content: oklch(23.92% 0.0901 136.87);
+	--color-warning: oklch(83.92% 0.1085 80);
+	--color-warning-content: oklch(43.92% 0.1085 80);
+	--color-error: oklch(75.1% 0.1814 22.37);
+	--color-error-content: oklch(35.1% 0.1814 22.37);
+	--radius-selector: 2rem;
+	--radius-field: 2rem;
+	--radius-box: 1rem;
+	--size-selector: 0.25rem;
+	--size-field: 0.25rem;
+	--border: 2px;
+	--depth: 1;
+	--noise: 0;
+}
+
+@plugin "daisyui/theme" {
+	name: 'custom_dark';
+	prefersdark: true;
+	--color-base-100: oklch(20.84% 0.008 17.911);
+	--color-base-200: oklch(18.522% 0.007 17.911);
+	--color-base-300: oklch(16.203% 0.007 17.911);
+	--color-base-content: oklch(83.768% 0.001 17.911);
+	--color-primary: oklch(31.29% 0.0894 250.37);
+	--color-primary-content: oklch(97% 0.0035 67.78);
+	--color-secondary: oklch(80.39% 0.1148 241.68);
+	--color-secondary-content: oklch(30.39% 0.1148 241.68);
+	--color-accent: oklch(83.92% 0.0901 136.87);
+	--color-accent-content: oklch(23.92% 0.0901 136.87);
+	--color-neutral: oklch(20% 0 0);
+	--color-neutral-content: oklch(80% 0.0081 61.42);
+	--color-info: oklch(80.39% 0.1148 241.68);
+	--color-info-content: oklch(30.39% 0.1148 241.68);
+	--color-success: oklch(83.92% 0.0901 136.87);
+	--color-success-content: oklch(23.92% 0.0901 136.87);
+	--color-warning: oklch(83.92% 0.1085 80);
+	--color-warning-content: oklch(43.92% 0.1085 80);
+	--color-error: oklch(75.1% 0.1814 22.37);
+	--color-error-content: oklch(35.1% 0.1814 22.37);
+	--radius-selector: 2rem;
+	--radius-field: 2rem;
+	--radius-box: 1rem;
+	--size-selector: 0.25rem;
+	--size-field: 0.25rem;
+	--border: 2px;
+	--depth: 1;
+	--noise: 0;
 }
 
 @import './global.css';
-@import './utilities.css';
